feature: Lms Grpc and server, s3 for logo url
